Fix for spacing on landing with additional sorters.

--- a/client/src/components/Heatmap/expandingheatmaptable.css
+++ b/client/src/components/Heatmap/expandingheatmaptable.css
@@ -2,6 +2,7 @@
   padding: 2px;
   margin: 4px;
 }
+
 .expandable-button {
   font-weight: 700;
   font-size: 2rem;
@@ -9,20 +10,29 @@
   text-align: center;
   cursor: "pointer";
 }
+
 .toprow {
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
   height: 1vh;
 }
-.expandingheatmaptable td {
-  padding: 2px;
-  margin: 4px;
-  font-size: 1.2rem;
-  line-height: 1.4;
+
+.subrow {
+  height: 1vh;
 }
-@media (min-width: 1500px) {
+
+.expandingheatmaptable td {
+  padding: 0px;
+  margin: 0px;
+  font-size: 1.1rem;
+  line-height: 1.2;
+}
+
+@media (min-width: 1550px) {
   .expandingheatmaptable td {
     font-size: 1.7rem;
     line-height: 1.5;
+    padding: 2px;
+    margin: 4px;
   }
 }
 
@@ -40,25 +50,35 @@ tr.toprow > :nth-child(2) {
   cursor: pointer;
   border-left: 1px solid rgba(0, 0, 0, 0.125);
 }
+
 .expandingheatmaptable td.selectable {
   cursor: cell;
   border-left: 1px solid rgba(0, 0, 0, 0.125);
 }
+
 .expandingheatmaptable td.selectable:hover {
   border: 2px solid #f28b00 !important;
 }
+
 .expandingheatmaptable td.selected {
   border-style: solid;
   border-width: 2px;
   border-color: #f28b00 !important;
 }
+
 .expandingheatmaptable td.spacer {
   height: 4px;
   border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 td.border_right {
-  max-width: calc(35vw / 10);
+  max-width: calc(25vw / 10);
+}
+
+@media (min-width: 1550px) {
+  td.border_right {
+    max-width: calc(35vw / 10);
+  }
 }
 
 tbody :last-child {
@@ -66,21 +86,29 @@ tbody :last-child {
 }
 
 /* Thanks: https://css-tricks.com/rotated-table-column-headers/ */
+
 .expandingheatmaptable td.rotate {
-  /* Something you can count on */
   height: 100px;
   white-space: nowrap;
   padding-bottom: 10px;
-  font-size: 15px;
+  font-size: 11px;
   font-weight: 400px;
-  line-height: 24px;
+  line-height: 16px;
 }
+
+@media (min-width: 1550px) {
+  .expandingheatmaptable td.rotate {
+    font-size: 15px;
+    line-height: 24px;
+  }
+}
+
 .expandingheatmaptable td.rotate > div {
-  transform:
-      /* Magic Numbers */ translate(5px, 28px)
+  transform: /* Magic Numbers */ translate(5px, 28px)
     /* 45 is really 360 - 45 */ rotate(315deg);
   width: 44px;
 }
+
 .expandingheatmaptable td.rotate > div > span {
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
   padding: 5px 10px;
